set command for update on git-pages

--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!--git subtree push --prefix dist origin gh-pages-->
